# data-structures

./: CMakeLists.txt  MyVector.cpp  MyVector.h  main.cpp  test.cpp
structures/Linked_List/: MyList.cpp  MyList.h
structures/vector/: MyVector.cpp
